removed padding from footer to fix outflowing content on mobile

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -17,7 +17,6 @@
 
 .footer-inner {
   grid-area: content;
-  padding: 1rem 10rem;
   max-width: 140rem;
 }
 
